objetos_aws/security_groups
{
    "SecurityGroups": [
        {
            "GroupId": "sg-06ac17d92f40b0cd5",
            "IpPermissionsEgress": [],
            "VpcId": "vpc-0ea4cbbd6e92e3abe",
            "OwnerId": "445567101225",
            "GroupName": "aurora-security-group",
            "Description": "Managed by Terraform",
            "IpPermissions": [
                {
                    "IpProtocol": "tcp",
                    "FromPort": 3306,
                    "ToPort": 3306,
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-0ba766b55bed51fee",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "Tags": [
                {
                    "Key": "Name",
                    "Value": "eks-cluster-sg-lanchonete-eks-cluster-2103661754"
                },
                {
                    "Key": "kubernetes.io/cluster/lanchonete-eks-cluster",
                    "Value": "owned"
                },
                {
                    "Key": "aws:eks:cluster-name",
                    "Value": "lanchonete-eks-cluster"
                }
            ],
            "VpcId": "vpc-0ea4cbbd6e92e3abe",
            "OwnerId": "445567101225",
            "GroupName": "eks-cluster-sg-lanchonete-eks-cluster-2103661754",
            "Description": "EKS created security group applied to ENI that is attached to EKS Control Plane master nodes, as well as any managed workloads.",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "445567101225",
                            "GroupId": "sg-0ba766b55bed51fee"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        },
        {
            "GroupId": "sg-00800dac65a7eed63",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [],
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ],
            "VpcId": "vpc-0ea4cbbd6e92e3abe",
            "OwnerId": "445567101225",
            "GroupName": "default",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "UserIdGroupPairs": [
                        {
                            "UserId": "445567101225",
                            "GroupId": "sg-00800dac65a7eed63"
                        }
                    ],
                    "IpRanges": [],
                    "Ipv6Ranges": [],
                    "PrefixListIds": []
                }
            ]
        }
    ]
}
